#cmake_minimum_required(VERSION 3.25)
#project(zeroAlgorithm)
#
#set(CMAKE_CXX_STANDARD 17)
#
#add_executable(31-next-permutation.cpp)
#
#set_target_properties(main PROPERTIES CXX_STANDARD 17)

#add_executable(${PROJECT_NAME} 31-next-permutation.cpp)

add_library(31-next-permutation.cpp)
#add_executable(MyLibrary 31-next-permutation.cpp)